--- a/css/home.less
+++ b/css/home.less
@@ -35,17 +35,17 @@
 	    flex: 1;
 		
 	}
-	.CenterContent{
+	.center-content{
 		width:1005px;
 		height:100%;
 		margin:0 auto;
 		//border:1px solid lawngreen;
 	}
-	.CenterHeader{
+	.center-header{
 		height:228px;
 		//border:1px solid rgb(185, 252, 0);
 	}
-	.CenterMain{
+	.center-main{
 		height:440px;
 		transform:scale(0.9);
 		transform-origin: 50% 33%;
@@ -81,17 +81,17 @@
 	    flex: 1;
 		
 	}
-	.CenterContent{
+	.center-content{
 		width:1005px;
 		height:100%;
 		margin:0 auto;
 		//border:1px solid lawngreen;
 	}
-	.CenterHeader{
+	.center-header{
 		height:228px;
 		//border:1px solid rgb(185, 252, 0);
 	}
-	.CenterMain{
+	.center-main{
 		height:440px;
 		transform:scale(0.9);
 		transform-origin: 50% 33%;
@@ -197,13 +197,13 @@
 	}
 }
 /*tab切换 start*/
-.TabsList{
+.tab-list{
 	position: absolute;
 	width: 210px;
 	height:38px;
 	top: 17px;
 	left: 60px;
-	.TabsLi{
+	.tab-li{
 		flex: 1;
 		height:100%;
 		line-height:38px;
@@ -211,16 +211,16 @@
 		font-size: 16px;
 	    text-align: center;
 	}
-	.DataCollection{
+	.data-collection{
 		background: url(../images/home/left_tab_off.png);
 	}
-	.DataServe{
+	.data-serve{
 		background: url(../images/home/right_tab_off.png);
 	}
-	.DataCollection.active{
+	.data-collection.active{
 		background: url(../images/home/left_tab_on.png);
 	}
-	.DataServe.active{
+	.data-serve.active{
 		background: url(../images/home/right_tab_on.png);
 	}
 }
@@ -304,7 +304,7 @@
 		margin-top: 20.1px;
 	}
 }
-.HeaderCon{
+.header-con{
 
 	.item{
 		display: inline-block;
@@ -400,14 +400,14 @@
 }
 /*绘制光点随着曲线移动  模块 end*/
 
-.HeaderCon{
+.header-con{
 	width: 798px;
     height: 78px;
     margin: 20px auto 0;
     background: url(../images/home/top_bg.png) no-repeat;
     background-size: 100% 100%;
 }
-.DownIconBox{
+.down-icon{
    position: relative;
    width: 40px;
    height:68px;
@@ -418,7 +418,7 @@
    -moz-animation: downMove 5s infinite;
    -webkit-animation: downMove 5s infinite;
 }
-.DownIconBox.UpSideDown{
+.down-icon.up-side-down{
 	margin-top:-10px;	
 	transform:rotate(180deg);
 	animation: upMove 5s infinite;
@@ -460,10 +460,10 @@
 
 /* 旋转模块  start*/
 
-.CenterMain{
-	position: relative;
+.center-main{
+	position: relative;	
 }
-.RollBottomDiv{
+.roll-bottom-div{
 	position: absolute;
 	width:360px;
 	height:102px;
@@ -498,12 +498,12 @@
 		transform: rotateX(60deg) rotateZ(180deg);
 	}
 }
-.RotateBox{
+.rotate-box{
 	width: 1000px;
 	height: 380px;
 }
 
-.RotateBox.outer{
+.rotate-box.outer{
   
 	background:url(../images/home/roll_wai.png);
 	background-size:100% 100%; 
@@ -513,7 +513,7 @@
 	// 	background-size:100% 100%; 
 	// 	border:1px solid red;
 	// }
-	.RotateItemMain{
+	.rotate-item-main{
 		width:100%;
 		height:100%;
 		//border:1px solid red;
@@ -525,7 +525,7 @@
 	
 }
 
-.RotateBox.inner{
+.rotate-box.inner{
 	margin: 90px 220px;
     width:  560px;
     height: 200px;
@@ -539,14 +539,14 @@
 	// 	background-size:100% 100%; 
 	// 	border:1px solid red;
 	// }
-	.RotateItemMain{
+	.rotate-item-main{
 		width:100%;
 		height:100%;
 		//border:1px solid red;
 	}	
 }
 
-.RotateParent {
+.rotate-parent {
 	width: 100%;
 	height:100%;
 	position: relative;
@@ -565,7 +565,7 @@
 	// animation: spin 50s linear infinite;
 }
 
-.RotateItem{
+.rotate-item{
 	width: 100px;
 	height:100px;
 	background:url(../images/home/blue_roll.png);
@@ -588,7 +588,7 @@
 		
 	}
 }
-.RotateItemInner{
+.rotate-item-inner{
 	width: 80px;
 	height: 80px;
 	background:url(../images/home/green_roll.png);
@@ -616,7 +616,7 @@
 	}
 	
 }
-.RotateBox.center{
+.rotate-box.center{
 	margin: 37px auto;
     width: 304px;
     height: 304px;
@@ -624,7 +624,7 @@
     z-index: 8;
 	top: -838px;
 }
-.CenterRoll{
+.center-roll{
 	width: 100%;
 	height: 100%;
 	top:30px;
@@ -632,7 +632,7 @@
 	padding-top: 20px;
 	background:url(../images/home/center_roll.png);
 	border-radius: 50%;
-	.CenterItem{
+	.center-item{
 		color: #fff;
 		font-size: 26px;
 		line-height: 65px;
@@ -641,7 +641,7 @@
 		margin-top: 34px;
 		
 	}
-	.CenterNum{
+	.center-num{
 		color: #ffe400;
 		font-size: 32px;
 		line-height: 50px;
@@ -654,20 +654,27 @@
 /* 旋转模块  end*/
 
 /* 中间底部 */
-.CenterBottom{
-	width: 760px;
-    margin: -55px auto 0;
+.center-bottom{
+	border: 1px solid red;
+	width: 970px;
+	height: 220px;
+	margin: -55px auto 0;
+	//background: #333;
 }
-.LevelDataLi{
+ .level-data-list{
+	 height: 100%;
+	//  height: 210px;
+ }
+.level-data-li{
 	width:137px;
     height: 170px;
     display: inline-block;
     position: relative;
 }
-.LevelDataLi+.LevelDataLi{
-	margin-left: 122px;
+.level-data-li+.level-data-li{
+	margin-left: 50px;
 }
-.UpIconBox{
+.up-icon{
 	width: 40px;
 	height:68px;
 	left: 46px;
@@ -678,21 +685,21 @@
 	-moz-animation: upMove 5s infinite;
 	-webkit-animation: upMove 5s infinite;
 }
-.UpIconBox.UpSideDown{
+.up-icon.up-side-down{
 	margin-top:20px;
 	transform:rotate(180deg);
 	animation: downMove 5s infinite;
 	-moz-animation: downMove 5s infinite;
 	-webkit-animation: downMove 5s infinite;
 }
-.ListItem{
+.list-item{
 	width: 137px;
 	height:122px;
 	text-align: center;
 	margin-top:62px;
     background: url(../images/home/bom_bg.png) no-repeat;
     padding-top: 24px;
-	.ItemNum{
+	.item-num{
 		color:#fff;
 		font-size:22px;
 		line-height: 38px;	
@@ -726,7 +733,7 @@
 		margin-top: 23px;
 		background: #1c3761;
 		position: relative;
-		.innerRadio{
+		.rotate-radio{
 			width:0%;
 			height:100%;
 			background: #00fff5;
