--- a/css/home.less
+++ b/css/home.less
@@ -1,7 +1,7 @@
 .body1 {
     width: 1920px;
     overflow-y: scroll;
-    background-color: #00052f;
+    background-color: #061a2d;
     background-image: url(../images/home/all_bg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -48,7 +48,7 @@
     .center-main {
         height: 440px;
         transform: scale(0.9);
-        transform-origin: 50% 33%; //border:1px solid rgb(185, 252, 0);
+        transform-origin: 50% 28%; //border:1px solid rgb(185, 252, 0);
     }
 }
 
@@ -262,8 +262,26 @@
     color: #fff;
     font-size: 20px;
     font-weight: 700;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+    .more-box{
+        width:80px;
+        text-align: right;
+        padding-right: 10px;
+        font-size: 14px;
+        line-height: 49px;
+        color: #fff;
+    }
+    .more{
+        margin-left: 4px;
+        display: inline-block;
+        width: 13px;
+        height: 13px;
+        background: url('../images/home/more_icon.png');
+        position: relative;
+        top: 2px;
+    }
 }
-
 .list-li {
     font-weight: 700;
     height: 54px;
@@ -693,7 +711,7 @@
     //border: 1px solid red;
     width: 1070px;
     height: 206px;
-    margin: -55px 0 0 -40px;
+    margin: -65px 0 0 -40px;
     padding: 0 50px; 
 }
 
@@ -757,7 +775,7 @@
 /* footer */
 
 .footer {
-    // margin-top: 10px;
+    margin-top: -10px;
     .point {
         min-width: 110px;
         padding: 0 10px;
@@ -793,6 +811,10 @@
             height: 100%; // background: url(../images/home/jt_lan.png) repeat-x;
             position: relative;
         }
+        .arrow-box.rotate{
+            transform: rotateY(180deg);
+            -webkit-transform: rotateY(180deg);
+        }
         .arrow-box::after {
             position: absolute;
             content: '';
@@ -810,7 +832,7 @@
             top: -8px;
         }
         .arrow-icon+.arrow-icon {
-            margin-left: -2px;
+            margin-left: -4px;
         }
     }
     .point:first-child {
@@ -926,7 +948,7 @@
     position: absolute;
     width: 43px;
     height: 109px;
-    border: 1px solid blue;
+   // border: 1px solid blue;
     top: 50px;
 }
 
