--- a/css/home.css
+++ b/css/home.css
@@ -91,8 +91,8 @@
 }
 /*导航*/
 .header {
-  padding: 10px 60px;
-  height: 80px;
+  padding: 3px 60px;
+  height: 65px;
   background: #00052f;
   background-size: 100% 100%;
   border-bottom: 1px solid #1f2550;
@@ -625,10 +625,9 @@
 /* 旋转模块  end*/
 /* 中间底部 */
 .center-bottom {
-  width: 1070px;
+  width: 970px;
   height: 206px;
-  margin: -65px 0 0 -40px;
-  padding: 0 50px;
+  margin: -65px 0 0 0;
 }
 .city-data-list {
   height: 100%;
@@ -719,6 +718,13 @@
   width: 100%;
   height: 100%;
   position: relative;
+}
+.footer .progress .arrow-mask {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../images/home/mask.png);
 }
 .footer .progress .arrow-box.rotate {
   transform: rotateY(180deg);
@@ -842,6 +848,19 @@
 .mCSB_scrollTools .mCSB_draggerContainer {
   position: absolute;
 }
+.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar,
+.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar,
+.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar,
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar,
+.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar:hover,
+.mCSB_scrollTools .mCSB_dragger:active .mCSB_dragger_bar:hover,
+.mCSB_scrollTools .mCSB_dragger.mCSB_dragger_onDrag .mCSB_dragger_bar:hover,
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar:hover {
+  background-color: transparent;
+  filter: "alpha(opacity=100)";
+  -ms-filter: "alpha(opacity=100)";
+  border-radius: 2px;
+}
 .mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonLeft,
 .mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight {
   position: absolute;
@@ -860,15 +879,4 @@
 }
 .mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight:hover {
   background: url(../images/home/jt_right_on.png) no-repeat;
-}
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-  background-color: transparent;
-  filter: "alpha(opacity=100)";
-  -ms-filter: "alpha(opacity=100)";
-  border-radius: 2px;
-}
-.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar {
-  background-color: transparent;
-  filter: "alpha(opacity=100)";
-  -ms-filter: "alpha(opacity=100)";
 }
