--- a/css/home.less
+++ b/css/home.less
@@ -100,8 +100,8 @@
 /*导航*/
 
 .header {
-    padding: 10px 60px;
-    height: 80px;
+    padding: 3px 60px;
+    height: 65px;
     background: #00052f;
     background-size: 100% 100%;
     border-bottom: 1px solid #1f2550;
@@ -233,7 +233,8 @@
             line-height: 22px;
             color: #ffffff;
         }
-        .no-update-icon,.warn-icon {
+        .no-update-icon,
+        .warn-icon {
             display: inline-block;
             width: 48px;
             height: 16px;
@@ -245,8 +246,8 @@
             background: url(../images/home/yellow_line.png);
         }
     }
-    .legend-li+.legend-li{
-        width:182px;
+    .legend-li+.legend-li {
+        width: 182px;
         margin-left: 40px;
     }
 }
@@ -264,15 +265,15 @@
     font-weight: 700;
     flex-direction: row;
     -webkit-flex-direction: row;
-    .more-box{
-        width:80px;
+    .more-box {
+        width: 80px;
         text-align: right;
         padding-right: 10px;
         font-size: 14px;
         line-height: 49px;
         color: #fff;
     }
-    .more{
+    .more {
         margin-left: 4px;
         display: inline-block;
         width: 13px;
@@ -282,6 +283,7 @@
         top: 2px;
     }
 }
+
 .list-li {
     font-weight: 700;
     height: 54px;
@@ -595,7 +597,7 @@
     // }
     .rotate-item-main {
         width: 100%;
-        height: 100%; 
+        height: 100%;
     }
 }
 
@@ -708,15 +710,14 @@
 /* 中间底部 */
 
 .center-bottom {
-    //border: 1px solid red;
-    width: 1070px;
+    width: 970px;
     height: 206px;
-    margin: -65px 0 0 -40px;
-    padding: 0 50px; 
+    margin: -65px 0 0 0;
+    //padding: 0 50px;
 }
 
 .city-data-list {
-    height: 100%; 
+    height: 100%;
 }
 
 .city-data-li {
@@ -811,7 +812,14 @@
             height: 100%; // background: url(../images/home/jt_lan.png) repeat-x;
             position: relative;
         }
-        .arrow-box.rotate{
+        .arrow-mask{
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%; 
+            background: url(../images/home/mask.png);
+        }
+        .arrow-box.rotate {
             transform: rotateY(180deg);
             -webkit-transform: rotateY(180deg);
         }
@@ -912,69 +920,70 @@
         }
     }
 }
-.tooltip.show{
+
+.tooltip.show {
     display: block;
 }
 
 .left-tooltip {
     left: 350px;
 }
+
 .right-tooltip {
     left: 1300px;
 }
 
 //仿滚动条对应的修改
-.mCSB_scrollTools{
-	//background-color: rgba(255, 255, 255,1);
-	width: 4px;
-	.mCSB_draggerRail {
-		width: 100%;
-		background:transparent;
-	}
+.mCSB_scrollTools {
+    width: 4px;
+    .mCSB_draggerRail {
+        width: 100%;
+        background: transparent;
+    }
 }
+
 .mCSB_scrollTools.mCSB_scrollTools_horizontal {
     width: 1070px;
     height: 100% !important;
     z-index: 8;
-    margin-left: -50px; //position: relative;
+    margin-left: -50px;
 }
 
-.mCSB_scrollTools .mCSB_draggerContainer {
-    position: absolute;
+
+.mCSB_scrollTools {
+    .mCSB_draggerContainer {
+        position: absolute;
+    }
+    .mCSB_dragger:hover, .mCSB_dragger:active,.mCSB_dragger.mCSB_dragger_onDrag,
+    .mCSB_dragger {
+        .mCSB_dragger_bar,
+        .mCSB_dragger_bar:hover {
+            background-color: transparent;
+            filter: "alpha(opacity=100)";
+            -ms-filter: "alpha(opacity=100)";
+            border-radius: 2px;
+        }
+    }
 }
 
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonLeft,
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight {
-    position: absolute;
-    width: 43px;
-    height: 109px;
-   // border: 1px solid blue;
-    top: 50px;
-}
+.mCSB_scrollTools.mCSB_scrollTools_horizontal{
 
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonLeft {
-    background: url(../images/home/jt_left_off.png) no-repeat; //left:-80px; 
-}
-
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight {
-    background: url(../images/home/jt_right_off.png) no-repeat; //right:-80px; 
-}
-
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonLeft:hover {
-    background: url(../images/home/jt_left_on.png) no-repeat;
-}
-
-.mCSB_scrollTools.mCSB_scrollTools_horizontal .mCSB_buttonRight:hover {
-    background: url(../images/home/jt_right_on.png) no-repeat;
-}
-.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
-    background-color:transparent;
-    filter: "alpha(opacity=100)";
-	-ms-filter: "alpha(opacity=100)";
-	border-radius:2px;
-}
-.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar {
-    background-color: transparent;
-     filter: "alpha(opacity=100)";
-    -ms-filter: "alpha(opacity=100)";
+    .mCSB_buttonLeft, .mCSB_buttonRight {
+        position: absolute;
+        width: 43px;
+        height: 109px; // border: 1px solid blue;
+        top: 50px;
+    }
+    .mCSB_buttonLeft {
+        background: url(../images/home/jt_left_off.png) no-repeat; //left:-80px; 
+    }
+    .mCSB_buttonRight {
+        background: url(../images/home/jt_right_off.png) no-repeat; //right:-80px; 
+    }
+    .mCSB_buttonLeft:hover {
+        background: url(../images/home/jt_left_on.png) no-repeat;
+    }
+    .mCSB_buttonRight:hover {
+        background: url(../images/home/jt_right_on.png) no-repeat;
+    }
 }
