--- a/css/home.less
+++ b/css/home.less
@@ -238,12 +238,12 @@
             display: inline-block;
             width: 48px;
             height: 16px;
-            background: url(../images/home/red_line.png);
+            background: url(../images/home/yellow_line.png);
             position: relative;
             top: 3px;
         }
         .warn-icon {
-            background: url(../images/home/yellow_line.png);
+            background: url(../images/home/red_line.png);
         }
     }
     .legend-li+.legend-li {
@@ -411,8 +411,45 @@
 .line-icon.warn {
     width: 50px;
     height: 50px;
-    background: url(../images/home/red.gif) no-repeat;
+    //background: url(../images/home/red.gif) no-repeat;
+    background: #fff;
     z-index: 5;
+    -webkit-animation: scaleLine 10s  infinite;
+    -moz-animation: scaleLine 10s infinite;
+    animation: scaleLine 10s  infinite;
+}
+
+@-webkit-keyframes scaleLine {
+    from {
+        transform: scale(1);
+        opacity: 1;
+    }
+    to {
+        transform: scale(0.2);
+        opacity: .2;
+    }
+}
+
+@-moz-keyframes scaleLine {
+    from {
+        -moz-transform: scale(1);
+        opacity: 1;
+    }
+    to {
+        -moz-transform: scale(0.2);
+        opacity: .2;
+    }
+}
+
+@keyframes scaleLine {
+    from {
+        -webkit-transform: scale(1);
+        opacity: 1;
+    }
+    to {
+        -webkit-transform: scale(0.2);
+        opacity: .2;
+    }
 }
 
 .line-icon.no-update {
@@ -712,19 +749,23 @@
 
 /* 中间底部 */
 .bottom-box{
-    width:1070px;
+    width:1076px;
     height: 206px;
     margin: -65px 0 0 -40px;
     flex-direction: row;
     -webkit-flex-direction: row;
     overflow: hidden;
+    //border: 1px solid red;
     .prevButton, .nextButton {
         flex: 1;
-        width: 43px;
+        // width: 43px;
         height: 109px;
         position: relative;
-        border: none;
-        top: 50px;   
+        top: 50px;  
+        visibility: visible; 
+    }
+    .prevButton.hidden, .nextButton.hidden {
+        visibility: hidden;
     }
     .prevButton {
         background: url(../images/home/jt_left_off.png) no-repeat; //left:-80px; 
@@ -740,12 +781,15 @@
     }
 }
 .center-bottom {
-    width:970px;
+    width:990px;
     height: 100%;
     overflow: hidden;
+    //border: 1px solid yellow;
 }
 
 .city-data-list {
+    position: relative;
+    left: 0;
     height: 100%;
 }
 
